# FPsolve

./: .cproject  .project  LICENSE  Newton-TODOs  README.md  Readme.INSTALL  cfg2g.py  convert_cfg.py  gen_eqs.py  gen_float_bench.sh  newton-test.sage  newton.sage  run_benchmarks.sh  run_float_benchmarks.sh  sdsirec.py
c/: CMakeLists.txt  README  configure  configure.ac  fa.h  libfa.so.1.4.0  testing.cpp
c/cmake/Modules/: FindGMP.cmake
c/example grammar for CFG inequality check/: minijava1.cfg  minijava2.cfg
c/libraries/augeas/src/: Makefile.in  fa.c  fa.h  lexer.c  parser.c  parser.h
c/src/: CMakeLists.txt  Makefile.am  approximate.sh  commutativeRExp.cpp  commutativeRExp.h  convert.sh  counting-semiring.h  debug_output.h  equations.h  float-semiring.cpp  float-semiring.h  free-semiring-old.cpp  free-semiring-old.h  free-semiring.cpp  free-semiring.h  free-structure.cpp  free-structure.h  gr_checker.cpp  hash.h  key_wrapper.h  linear_set.h  lossy_stress.g  main.cpp  matrix.h  matrix_free_semiring.h  monomial.h  newton.h  newton_generic.h  parser.cpp  parser.h  polynome.h  polynomial.cpp  polynomial.h  prefix-semiring.cpp  prefix-semiring.h  pseudo_linear_set.h  semilinSetExp.cpp  semilinSetExp.h  semilinear_set.h  semilinear_util.h  (+14 more)
c/src/datastructs/: equations.h  finite_automaton.cpp  finite_automaton.h  free-structure.cpp  free-structure.h  hash.h  libfa_fa.h  matrix.h  matrix_ublas.h  regular_language.h  sparse_vec.h  unique_set.h  unique_vector_map.h  var.h  var_degree_map.cpp  var_degree_map.h  vec_set.h
c/src/libraries/augeas/src/: fa.h
c/src/polynomials/: commutative_monomial.cpp  commutative_monomial.h  commutative_polynomial.h  lossy_non_commutative_monomial.h  lossy_non_commutative_polynomial.h  monomial.cpp  monomial.h  non_commutative_monomial.h  non_commutative_polynomial.h  polynomial.h
c/src/semirings/: bool-semiring.cpp  bool-semiring.h  commutativeRExp.cpp  commutativeRExp.h  float-semiring.cpp  float-semiring.h  free-semiring.h  linear_set.h  lossy-finite-automaton.cpp  lossy-finite-automaton.h  lossy-regular-expression.cpp  lossy-regular-expression.h  lossy-semiring.cpp  lossy-semiring.h  maxmin-semiring.h  prec-rat-semiring.h  prefix-semiring.cpp  prefix-semiring.h  pseudo_linear_set.h  semilinSetExp.cpp  semilinSetExp.h  semilinSetNdd.cpp  semilinSetNdd.h  semilinSetNdd_getoffsets.cpp  semilinSetNdd_getoffsets.h  semilinSetNdd_util.cpp  semilinSetNdd_util.h  semilinear_set.h  semilinear_util.h  semiring.h  tropical-semiring.cpp  tropical-semiring.h  tuple-semiring.h  viterbi-semiring.h  why-set.cpp  why-set.h
c/src/solvers/: kleene_seminaive.h  newton_generic.h  solver_utils.h
c/src/utils/: debug_output.h  deriv_generator.h  profiling-macros.h  string_util.h  timer.h
c/test/: CMakeLists.txt  Makefile.am  check_output.sh  foo.g  minijava-modified.g  minijava.g  run_perf.sh  test-bool-semiring.cpp  test-bool-semiring.h  test-commutativeRExp.cpp  test-commutativeRExp.h  test-float-semiring.cpp  test-float-semiring.h  test-free-semiring.cpp  test-free-semiring.h  test-lossy.cpp  test-lossy.h  test-matrix.cpp  test-matrix.h  test-non-commutative-polynomial.cpp  test-non-commutative-polynomial.h  test-polynomial.cpp  test-polynomial.h  test-prefix-semiring.cpp  test-prefix-semiring.h  test-pseudolinearSet.cpp  test-pseudolinearSet.h  test-rat-semiring.cpp  test-rat-semiring.h  test-semilinSetExp.cpp  test-semilinSetExp.h  test-semilinSetNdd.cpp  test-semilinSetNdd.h  test-semilinearSet.cpp  test-semilinearSet.h  test-tropical-SR.cpp  test-tropical-SR.h  test-tuple-semiring.cpp  test-tuple-semiring.h  test-var.cpp  (+7 more)
c/test/grammars/: 01_student-159.cfg  NLP-test2.g  NLP_test1.g  NLP_test2.g  NLP_test3.g  README  SOURCES  a_student-28.cfg  ab_student-909.cfg  abc_student-49.cfg  algol-60.g  arith_amb.g  arith_amb2.g  arith_braces_unamb.g  arith_braces_unamb2.g  arith_unamb.g  binary_amb.g  binary_unamb.g  bintrees.g  bintrees_float.g  bintrees_slset.g  course_codes.g  data_files.g  data_files2.g  datalog_ex_rexp.g  datalog_ex_slset.g  even.g  float_perf_test2.g  float_perf_test3.g  float_perf_test4.g  floattest1.g  leq.g  ndd_test.g  ndd_test2.g  numbers.g  palindromes.g  postcodes1.g  postcodes2.g  signed_digits.g  simple_sentences.g  (+13 more)
c/test/grammars/cfg-analyze/: answer-3.cfg  student-46.cfg
c/test/grammars/float-random/: float_100_01.cfg  float_100_02.cfg  float_10_01.cfg  float_10_02.cfg  float_10_03.cfg  float_10_04.cfg  float_10_05.cfg  float_20_01.cfg  float_20_02.cfg  float_20_03.cfg  float_20_04.cfg  float_20_05.cfg  float_30_01.cfg  float_30_02.cfg  float_30_03.cfg  float_30_04.cfg  float_30_05.cfg  float_40_01.cfg  float_40_02.cfg  float_40_03.cfg  float_40_04.cfg  float_40_05.cfg  float_50_01.cfg  float_50_02.cfg  float_50_03.cfg  float_50_04.cfg  float_50_05.cfg  float_60_01.cfg  float_60_02.cfg  float_60_03.cfg  float_60_04.cfg  float_60_05.cfg  float_70_01.cfg  float_70_02.cfg  float_70_03.cfg  float_70_04.cfg  float_70_05.cfg  float_80_01.cfg  float_80_02.cfg  float_80_03.cfg  (+5 more)
c/test/slsetndd/: test1.g  test10.g  test11.g  test12.g  test13.g  test14.g  test15.g  test16.g  test17.g  test18.g  test19.g  test2.g  test20.g  test21.g  test22.g  test23.g  test24.g  test25.g  test26.g  test27.g  test28.g  test29.g  test3.g  test30.g  test4.g  test5.g  test6.g  test7.g  test8.g  test9.g
